# Course-Project-Teacher-Manager

./: CMakeLists.txt  teacher.txt
include/: teacher.h
src/: addinfo.c  analyse.c  avg.c  change.c  delete.c  load.c  login.c  main.c  menu.c  save.c  search.c  show.c  sort.c  teacher.h
